lab1/Test/L1-A-5-37.output
Error Type B at Line 1
Error Type B at Line 4
Error Type A at Line 7
Error Type A at Line 7
