lab1/Test/L1-A-5-37.cmm
ilhGXvIYR TgXSUtrnKDO ( struct AMh LlDohRR_4QlMqcc 
  [ 155650605 ] [ 1056251000 ] ) {
  return ! H975qDVq8ySN3BhX6g ( B ) . dGOEOGUH5IauVL3fv5OR 
    [ ] . M4s5zZEzpKKxXdLwVK = - gikjmGoMRbYy1ei3ftJ = 
    xmR2rXecnQQRsWigYZHJ ;
}
@%